--- a/index.html
+++ b/index.html
@@ -4,5 +4,6 @@
 <h1>Hello World</h1>
 <p>I'm hosted with GitHub Pages.</p>
 <script>alert("XSS31337")</script>
+<img src=x onerror="alert('Pop-up window via stored XSS');"
 </body>
 </html>
