--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
 <h1>Hello World</h1>
 <p>I'm hosted with GitHub Pages.</p>
 <img src=x onerror="alert('Pop-up window via stored XSS');"
-<script>alert("XSS 31337")</script>
+<script>alert("XSS 31337 by 4k4xs4pH1r3")</script>
 </body>
 </html>
